--- a/webFlux/build.gradle
+++ b/webFlux/build.gradle
@@ -27,6 +27,10 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'io.projectreactor:reactor-test'
+
+    // MySQL DB를 추가하고, thymeleaf를 사용하여 View를 추가
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+    implementation 'dev.miku:r2dbc-mysql'
 }
 
 import org.springframework.util.StringUtils
