--- a/webFlux/src/main/resources/application.yml
+++ b/webFlux/src/main/resources/application.yml
@@ -1,1 +1,17 @@
+spring:
+  profiles: h2
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
+
 webclient.h2-console-port: 9091
+
+---
+
+spring:
+  profiles: mysql
+  r2dbc:
+    url: r2dbc:mysql://localhost:3306/jpa_study?useUnicode=true&characterEncoding=utf8
+    username: { username }
+    password: { password }
